--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -7,279 +7,209 @@
     tools:context="com.calendartest.AddEventActivity">
 
 
-    <EditText
-        android:id="@+id/edtEventName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="13"
-        android:hint="@string/add_event_name"
-        android:inputType="textPersonName"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        tools:layout_constraintLeft_creator="1"
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/btnColorPick"
-        android:layout_width="48dp"
-        android:layout_height="42dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:background="#00000000"
-        android:scaleType="fitCenter"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintLeft_toRightOf="@+id/edtEventName"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/palette_dimgray"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-    <EditText
-        android:id="@+id/edtEventLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="13"
-        android:hint="@string/add_event_location"
-        android:inputType="textPersonName"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="16dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnLocationPick" />
-
-    <ImageButton
-        android:id="@+id/btnLocationPick"
-        android:layout_width="48dp"
-        android:layout_height="42dp"
-        android:background="#00000000"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/locationicon"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="21dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnColorPick"
-        app:layout_constraintLeft_toLeftOf="@+id/btnColorPick" />
-
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="6dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        android:layout_marginStart="6dp"
-        android:text="@string/add_event_all_day"
-        android:textOff="@string/add_event_all_day"
-        android:textOn="@string/add_event_all_day"
-        android:visibility="visible"
-        app:layout_constraintLeft_toLeftOf="@+id/edtEventLocation"
-        app:layout_constraintRight_toRightOf="@+id/btnLocationPick"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/edtEventLocation" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="從"
-        app:layout_constraintBottom_toBottomOf="@+id/txtDateFrom"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtDateFrom"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="21dp"
-        android:text="到"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginLeft="16dp" />
-
-    <TextView
-        android:id="@+id/txtDateFrom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceSearchResultTitle"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/switch1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.501" />
-
-    <TextView
-        android:id="@+id/txtDateTo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:textAppearance="?attr/textAppearanceSearchResultTitle"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDateFrom"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-    <TextView
-        android:id="@+id/txtTimeFrom"
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="64dp"
-        android:textAppearance="?attr/textAppearanceSearchResultTitle"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="64dp"
-        app:layout_constraintLeft_toRightOf="@+id/txtDateFrom"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtTimeTo"
-        android:layout_marginBottom="20dp" />
-
-    <TextView
-        android:id="@+id/txtTimeTo"
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceSearchResultTitle"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/txtDateTo"
-        android:layout_marginRight="95dp"
-        android:layout_marginLeft="95dp"
-        android:layout_marginStart="95dp"
-        android:layout_marginEnd="95dp"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/txtDateTo"
-        app:layout_constraintTop_toTopOf="@+id/txtDateTo" />
-
-    <Spinner
-        android:id="@+id/repeatPicker"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="1dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginStart="8dp"
-        android:background="#00000000"
-        android:entries="@array/repeat_frequency"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/textView2"
-        app:layout_constraintRight_toRightOf="@+id/btnLocationPick"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        android:layout_marginBottom="7dp" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_event_repeat_frequency"
-        android:layout_marginStart="16dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_event_privacy"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <Spinner
-        android:id="@+id/privacyPicker"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:background="#00000000"
-        android:entries="@array/privacy"
-        app:layout_constraintLeft_toLeftOf="@+id/edtEventLocation"
-        app:layout_constraintRight_toRightOf="@+id/btnLocationPick"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        app:layout_constraintHorizontal_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_event_remind"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/remindPicker"
-        android:layout_marginStart="16dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="7dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <Spinner
-        android:id="@+id/remindPicker"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="69dp"
-        android:layout_marginTop="71dp"
-        android:background="#00000000"
-        android:entries="@array/remind"
-        android:spinnerMode="dialog"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/edtEventLocation"
-        app:layout_constraintRight_toRightOf="@+id/btnLocationPick"
-        app:layout_constraintTop_toTopOf="@+id/textView8"
+        app:layout_constraintVertical_bias="0.0"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1">
 
-    <EditText
-        android:id="@+id/edtEventDescription"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:ems="13"
-        android:hint="@string/add_event_description"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/btnLocationPick"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        <EditText
+            android:id="@+id/edtEventName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:ems="13"
+            android:hint="@string/add_event_name"
+            android:inputType="textPersonName" />
+
+        <ImageButton
+            android:id="@+id/btnColorPick"
+            android:layout_width="48dp"
+            android:layout_height="42dp"
+            android:layout_alignTop="@+id/edtEventName"
+            android:layout_marginStart="17dp"
+            android:layout_toEndOf="@+id/edtEventName"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/palette_dimgray" />
+
+        <EditText
+            android:id="@+id/edtEventLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/edtEventName"
+            android:layout_below="@+id/edtEventName"
+            android:layout_marginTop="8dp"
+            android:ems="13"
+            android:hint="@string/add_event_location"
+            android:inputType="textPersonName" />
+
+        <ImageButton
+            android:id="@+id/btnLocationPick"
+            android:layout_width="48dp"
+            android:layout_height="42dp"
+            android:layout_alignBottom="@+id/edtEventLocation"
+            android:layout_alignStart="@+id/btnColorPick"
+            android:background="#00000000"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/locationicon" />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/edtEventName"
+            android:layout_alignRight="@id/btnColorPick"
+            android:layout_below="@id/edtEventLocation"
+            android:layout_marginTop="10dp"
+            android:text="@string/add_event_all_day"
+            android:textOff="@string/add_event_all_day"
+            android:textOn="@string/add_event_all_day"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/txtFrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/edtEventName"
+            android:layout_below="@id/switch1"
+            android:layout_marginTop="20dp"
+            android:text="從"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtTo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/edtEventName"
+            android:layout_below="@+id/txtFrom"
+            android:layout_marginTop="20dp"
+            android:text="到"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtDateFrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/txtFrom"
+            android:layout_marginLeft="40dp"
+            android:layout_toRightOf="@id/txtFrom"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtDateTo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/txtTo"
+            android:layout_marginLeft="40dp"
+            android:layout_toRightOf="@id/txtTo"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtTimeFrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/txtFrom"
+            android:layout_marginLeft="40dp"
+            android:layout_toRightOf="@id/txtDateFrom"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtTimeTo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/txtTo"
+            android:layout_marginLeft="40dp"
+            android:layout_toRightOf="@id/txtDateTo"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/txtRepeat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/txtTo"
+            android:layout_below="@id/txtTo"
+            android:layout_marginTop="20dp"
+            android:text="@string/add_event_repeat_frequency" />
+
+        <Spinner
+            android:id="@+id/repeatPicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/txtRepeat"
+            android:layout_alignRight="@id/btnLocationPick"
+            android:layout_below="@id/txtRepeat"
+            android:layout_marginTop="5dp"
+            android:background="#00000000"
+            android:entries="@array/repeat_frequency" />
+
+        <TextView
+            android:id="@+id/txtPrivacy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/txtRepeat"
+            android:layout_below="@id/repeatPicker"
+            android:layout_marginTop="10dp"
+            android:text="@string/add_event_privacy" />
+
+        <Spinner
+            android:id="@+id/privacyPicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/txtPrivacy"
+            android:layout_alignRight="@id/btnLocationPick"
+            android:layout_below="@id/txtPrivacy"
+            android:layout_marginTop="5dp"
+            android:background="#00000000"
+            android:entries="@array/privacy" />
+
+        <TextView
+            android:id="@+id/txtRemind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/txtPrivacy"
+            android:layout_below="@id/privacyPicker"
+            android:layout_marginTop="10dp"
+            android:text="@string/add_event_remind" />
+
+        <Spinner
+            android:id="@+id/remindPicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/txtFrom"
+            android:layout_alignRight="@id/btnLocationPick"
+            android:layout_below="@id/txtRemind"
+            android:layout_marginTop="5dp"
+            android:background="#00000000"
+            android:entries="@array/remind"
+            android:spinnerMode="dialog" />
+
+        <EditText
+            android:id="@+id/edtEventDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/edtEventName"
+            android:layout_alignRight="@id/btnColorPick"
+            android:layout_below="@id/remindPicker"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="50dp"
+            android:ems="13"
+            android:hint="@string/add_event_description"
+            android:inputType="textPersonName" />
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
