--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,11 +15,21 @@
         app:mcv_selectionColor="@color/colorAccent"
         app:mcv_showOtherDates="all" />
 
+    <TextView
+        android:id="@+id/txtDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/calendarView"
+        android:layout_marginLeft="20dp"
+        android:textSize="30sp" />
+
     <ListView
         android:id="@+id/eventList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/calendarView" />
+        android:layout_below="@id/txtDate"
+        android:divider="#000"
+        android:dividerHeight="1dp"/>
 
 
 </RelativeLayout>
