--- a/app/src/main/res/layout/row_veiw.xml
+++ b/app/src/main/res/layout/row_veiw.xml
@@ -3,7 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="8dp"
+    android:gravity="center"
     android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/imgColor"
+        android:layout_width="15dp"
+        android:layout_height="10dp"
+        android:layout_weight="1"
+        android:scaleType="fitCenter"
+        app:srcCompat="@android:drawable/presence_invisible" />
 
     <TextView
         android:id="@+id/txtName"
@@ -13,11 +23,4 @@
         android:text="TextView"
         android:textAppearance="@android:style/TextAppearance.Material.Large" />
 
-    <ImageView
-        android:id="@+id/imgColor"
-        android:layout_width="wrap_content"
-        android:layout_height="27dp"
-        android:layout_weight="1"
-        android:scaleType="fitCenter"
-        app:srcCompat="@android:drawable/presence_invisible" />
 </LinearLayout>
